# predict_customer_churn

./: README.md  steo_of_commit.txt
churn-now/: pyproject.toml
churn-now/src/: main.py
