[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["carrick Cheah <carrick113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
