[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["carrick Cheah <carrick113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
imblearn = "^0.0"
xgboost = "^2.1.3"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
